--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ enable_testing()
 find_package(GTest CONFIG REQUIRED)
 
 find_package(spdlog CONFIG REQUIRED)
+find_package(unofficial-enet CONFIG REQUIRED)
 
 add_subdirectory(src)
 add_subdirectory(tests)
