--- a/src/lol_at_home_server/CMakeLists.txt
+++ b/src/lol_at_home_server/CMakeLists.txt
@@ -1,6 +1,8 @@
 include(${CMAKE_SOURCE_DIR}/cmake/SetTargetDefaults.cmake)
 
 add_executable(lol-at-home-server
+  Entity.cc
+  GameState.cc
   GameStateThread.cc
   Main.cc
 )
