--- a/src/lol_at_home_server/CMakeLists.txt
+++ b/src/lol_at_home_server/CMakeLists.txt
@@ -14,6 +14,7 @@ target_include_directories(lol-at-home-server PRIVATE
 )
 
 target_link_libraries(lol-at-home-server PRIVATE
+  lol-at-home-shared
   spdlog::spdlog
   unofficial::enet::enet
   EnTT::EnTT
