--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,1 @@
-include(${CMAKE_SOURCE_DIR}/cmake/AddTestExecutable.cmake)
-
-# add_test_executable(lol-at-home-server-tests lol-at-home-server
-# ...
-# )
+add_subdirectory(shared)
