--- a/src/client/game/CMakeLists.txt
+++ b/src/client/game/CMakeLists.txt
@@ -2,6 +2,7 @@ include(${CMAKE_SOURCE_DIR}/cmake/SetTargetDefaults.cmake)
 
 add_executable(lol-at-home-client
   GameClient.cc
+  GameplayScene.cc
 )
 
 set_target_defaults(lol-at-home-client)
