--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -3,6 +3,7 @@ include(${CMAKE_SOURCE_DIR}/cmake/SetTargetDefaults.cmake)
 add_executable(lol-at-home-server
   core/GameState.cc
   core/GameStateThread.cc
+  core/Server.cc
   networking/EnetNetworkManager.cc
   Main.cc
 )
