--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,10 +1,9 @@
 include(${CMAKE_SOURCE_DIR}/cmake/SetTargetDefaults.cmake)
 
 add_executable(lol-at-home-server
+  core/EnetInterface.cc
   core/GameState.cc
-  core/GameStateThread.cc
   core/Server.cc
-  networking/EnetNetworkManager.cc
   Main.cc
 )
 
