done fixing outbound T_T

--- a/src/shared/CMakeLists.txt
+++ b/src/shared/CMakeLists.txt
@@ -1,26 +1,34 @@
 include(${CMAKE_SOURCE_DIR}/cmake/SetTargetDefaults.cmake)
 
-set(FBS_FILES 
+set(FBS_FILES
   ${CMAKE_CURRENT_SOURCE_DIR}/fbs/c2s_message.fbs
+  ${CMAKE_CURRENT_SOURCE_DIR}/fbs/common_types.fbs
   ${CMAKE_CURRENT_SOURCE_DIR}/fbs/game_actions.fbs
   ${CMAKE_CURRENT_SOURCE_DIR}/fbs/game_state.fbs
+  ${CMAKE_CURRENT_SOURCE_DIR}/fbs/s2c_message.fbs
 )
+
 find_program(FLATC flatc REQUIRED)
 set(GENERATED_DIR ${CMAKE_CURRENT_BINARY_DIR}/generated)
 file(MAKE_DIRECTORY ${GENERATED_DIR})
 
+set(GENERATED_HEADERS
+  ${GENERATED_DIR}/c2s_message_generated.h
+  ${GENERATED_DIR}/common_types_generated.h
+  ${GENERATED_DIR}/game_actions_generated.h
+  ${GENERATED_DIR}/game_state_generated.h
+  ${GENERATED_DIR}/s2c_message_generated.h
+)
+
 add_custom_command(
-  OUTPUT 
-    ${GENERATED_DIR}/game_state_generated.h
-    ${GENERATED_DIR}/game_actions_generated.h
+  OUTPUT ${GENERATED_HEADERS}
   COMMAND ${FLATC} --cpp --scoped-enums -o ${GENERATED_DIR} ${FBS_FILES}
   DEPENDS ${FBS_FILES}
-  COMMENT "Generating FlatBuffers C++ code"
+  COMMENT "Generating FlatBuffers C++ code for lol-at-home-shared"
 )
 
 add_library(lol-at-home-shared
-  ${GENERATED_DIR}/game_actions_generated.h
-  ${GENERATED_DIR}/game_state_generated.h
+  ${GENERATED_HEADERS}
   GameActionSerializer.cc
   GameStateSerializer.cc
   PlayerAssignmentSerializer.cc
