--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(lol-at-home-server
   core/EnetInterface.cc
   core/GameState.cc
   core/InboundEventVisitor.cc
+  core/OutboundEventVisitor.cc
   core/Server.cc
   Main.cc
 )
