--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,20 +1,19 @@
 include(${CMAKE_SOURCE_DIR}/cmake/SetTargetDefaults.cmake)
 
-add_executable(lol-at-home-server
+add_library(lol-at-home-server
   core/EnetInterface.cc
   core/GameState.cc
   core/InboundEventVisitor.cc
   core/Server.cc
-  Main.cc
 )
 
 set_target_defaults(lol-at-home-server)
 
-target_include_directories(lol-at-home-server PRIVATE
+target_include_directories(lol-at-home-server PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-target_link_libraries(lol-at-home-server PRIVATE
+target_link_libraries(lol-at-home-server PUBLIC
   lol-at-home-shared
   spdlog::spdlog
   unofficial::enet::enet
@@ -28,3 +27,13 @@ if(WIN32)
     ws2_32
   )
 endif()
+
+add_executable(lol-at-home-server-app
+  Main.cc
+)
+
+set_target_defaults(lol-at-home-server-app)
+
+target_link_libraries(lol-at-home-server-app PRIVATE
+  lol-at-home-server
+)
