all roads lead to the queue

--- a/src/client/game/CMakeLists.txt
+++ b/src/client/game/CMakeLists.txt
@@ -1,16 +1,17 @@
 include(${CMAKE_SOURCE_DIR}/cmake/SetTargetDefaults.cmake)
 
-add_executable(lol-at-home-client
+add_executable(lol-at-home-game
   Main.cc
+  NetworkClient.cc
 )
 
-set_target_defaults(lol-at-home-client)
+set_target_defaults(lol-at-home-game)
 
-target_include_directories(lol-at-home-client PRIVATE
+target_include_directories(lol-at-home-game PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-target_link_libraries(lol-at-home-client PRIVATE
+target_link_libraries(lol-at-home-game PRIVATE
   lol-at-home-engine
   lol-at-home-shared
   spdlog::spdlog
@@ -20,7 +21,7 @@ target_link_libraries(lol-at-home-client PRIVATE
 
 # For enet
 if(WIN32)
-  target_link_libraries(lol-at-home-client PRIVATE
+  target_link_libraries(lol-at-home-game PRIVATE
     winmm
     ws2_32
   )
