--- a/src/shared/CMakeLists.txt
+++ b/src/shared/CMakeLists.txt
@@ -2,8 +2,8 @@ include(${CMAKE_SOURCE_DIR}/cmake/SetTargetDefaults.cmake)
 
 set(FBS_FILES
   ${CMAKE_CURRENT_SOURCE_DIR}/fbs/c2s_message.fbs
-  ${CMAKE_CURRENT_SOURCE_DIR}/fbs/common_types.fbs
   ${CMAKE_CURRENT_SOURCE_DIR}/fbs/game_actions.fbs
+  ${CMAKE_CURRENT_SOURCE_DIR}/fbs/game_common.fbs
   ${CMAKE_CURRENT_SOURCE_DIR}/fbs/game_state.fbs
   ${CMAKE_CURRENT_SOURCE_DIR}/fbs/s2c_message.fbs
 )
@@ -14,8 +14,8 @@ file(MAKE_DIRECTORY ${GENERATED_DIR})
 
 set(GENERATED_HEADERS
   ${GENERATED_DIR}/c2s_message_generated.h
-  ${GENERATED_DIR}/common_types_generated.h
   ${GENERATED_DIR}/game_actions_generated.h
+  ${GENERATED_DIR}/game_common_generated.h
   ${GENERATED_DIR}/game_state_generated.h
   ${GENERATED_DIR}/s2c_message_generated.h
 )
