--- a/src/client/engine/CMakeLists.txt
+++ b/src/client/engine/CMakeLists.txt
@@ -14,6 +14,7 @@ target_include_directories(lol-at-home-engine PUBLIC
 
 target_link_libraries(lol-at-home-engine PRIVATE
   SDL3::SDL3
+  SDL3_ttf::SDL3_ttf
   EnTT::EnTT
   spdlog::spdlog
 )
